<resources>
    <string name="app_name">Celeritem</string>
    <string name="exerciseService">ExerciseService</string>
    <string name="socializeService">SocializeService</string>
    <string name="options">Options</string>
    <string name="history">History</string>
    <string name="accuracy">GPS accuracy</string>
    <string name="sound">Sound</string>
    <string name="speed">Speed</string>
    <string name="state">State</string>
    <string name="kmNotification">Kilometer notification</string>
    <string name="ok">OK</string>
    <string name="start">Start</string>
    <string name="waiting">Waiting for GPS to start</string>
    <string name="stop">Stop</string>
    <string name="cancel">Cancel</string>
    <string name="zoomLevel">Zoom level</string>
    <string name="settingsSaved">Changes have been saved</string>
    <string name="noChanges">No changes made</string>
    <string name="orderByDistance">Order by distance</string>
    <string name="orderByDate">Order by date</string>
    <string name="distance">Distance</string>
    <string name="avgSpeed">Avg. speed</string>
    <string name="breaks">Breaks</string>
    <string name="breakTime">Break-time</string>
    <string name="runTime">Run-time</string>
    <string name="result">Result</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="run">RUN</string>
    <string name="bike">BIKE</string>
    <string name="socialize">Socialize</string>
    <string name="login">Login</string>
    <string name="age">Age</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="phone">Phone</string>
    <string name="name">Name</string>
    <string name="wantsTo">Wants to</string>
    <string name="requestInfo">Delete request by clicking the lower right button or on the front page</string>
    <string name="deleteOldRequest">Delete old request</string>
    <string name="city">City</string>
    <string name="exerciseTime">Exercise-time</string>
    <string name="loading">Loading ..</string>
    <string name="saveInput">Save input</string>
    <string name="quoteForInspiration">A quote to inspire</string>
    <string name="showQuotes">Show quotes</string>
    <string name="walk">WALK</string>
    <string name="kcal_calculator">Calculator</string>
    <string name="bmi">BMI</string>
    <string name="weight">Weight in kg</string>
    <string name="height">Height in cm</string>
    <string name="bmiTextResult">Body Mass Index</string>
    <string name="btnResult">Show result</string>
    <string name="kcalHeadText">Calorie calculator</string>
    <string name="MET">Activity</string>
    <string name="activityTime">Minutes</string>
    <string name="calcTitle">Calculator</string>
    <string name="kcalTextResult">Calories</string>
    <string name="gpsToolTip">A high accuracy uses more battery</string>
</resources>
