<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OptionsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center"
        android:text="@string/options"
        android:textColor="@color/darkBlue"
        android:textSize="50sp" />
    <TextView
        android:id="@+id/gpsWarning"
        android:layout_width="275dp"
        android:layout_gravity="center"
        android:layout_height="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/gpsToolTip"
        android:textColor="#FF0000"/>

    <GridLayout
        android:layout_width="275dp"
        android:layout_height="240dp"
        android:layout_gravity="center"

        android:columnCount="2"
        android:rowCount="4">

        <TextView
            android:layout_width="175dp"
            android:layout_height="50dp"
            android:layout_row="0"
            android:layout_column="0"
            android:gravity="center|left"
            android:text="@string/accuracy"
            android:textSize="15sp" />

        <SeekBar
            android:id="@+id/accuracySlider"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="right" />

        <TextView
            android:layout_width="175dp"
            android:layout_height="50dp"
            android:layout_row="1"
            android:layout_column="0"
            android:gravity="center|left"
            android:text="@string/sound"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/soundCheckBox"
            android:layout_height="50dp"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_gravity="right" />

        <TextView
            android:layout_width="175dp"
            android:layout_height="50dp"
            android:layout_row="2"
            android:layout_column="0"
            android:gravity="center|left"
            android:text="@string/kmNotification"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/kmNotificationCheckBox"
            android:layout_height="50dp"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_gravity="right" />
        <TextView
            android:layout_width="175dp"
            android:layout_height="50dp"
            android:layout_row="3"
            android:layout_column="0"
            android:gravity="center|left"
            android:text="@string/showQuotes"
            android:textSize="15sp" />

        <CheckBox
            android:id="@+id/showQuotesCheckBox"
            android:layout_height="50dp"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_gravity="right" />

    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="center">

        <Button
            android:id="@+id/cancelBtn"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginRight="7dp"
            android:layout_marginBottom="20dp"
            android:background="@color/lightBlue"
            android:gravity="center"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/okBtn"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginLeft="7dp"
            android:layout_marginBottom="20dp"
            android:background="@color/lightBlue"
            android:gravity="center"
            android:text="@string/ok" />

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>