<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center"
        android:text="@string/socialize"
        android:textColor="@color/darkBlue"
        android:textSize="50sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:gravity="center"
        android:text="@string/requestInfo"
        android:textSize="20sp" />

    <ListView
        android:id="@+id/socializeList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7" />

    <Button
        android:layout_width="120dp"
        android:layout_height="0dp"
        android:layout_gravity="end"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="0.08"
        android:onClick="delete"
        android:text="@string/delete" />
</LinearLayout>
