<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SocializeLogin">

    <ScrollView
        android:id="@+id/mainSection"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:gravity="center"
                android:text="@string/socialize"
                android:textColor="@color/darkBlue"
                android:textSize="50sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/darkBlue"
                android:textSize="30sp" />

            <GridLayout
                android:layout_width="275dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:columnCount="2"
                android:rowCount="6">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:gravity="center|start"
                    android:text="@string/name"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/nameInput"
                    android:layout_width="130dp"
                    android:layout_height="50dp"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:layout_gravity="end" />

                <TextView
                    android:layout_height="50dp"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:gravity="center|start"
                    android:text="@string/age"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/ageInput"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:layout_gravity="end"
                    android:inputType="number" />

                <TextView
                    android:layout_height="50dp"
                    android:layout_row="2"
                    android:layout_column="0"
                    android:gravity="center|start"
                    android:text="@string/gender"
                    android:textSize="15sp" />

                <Spinner
                    android:id="@+id/genderInput"
                    android:layout_width="130dp"
                    android:layout_height="50dp"
                    android:layout_row="2"
                    android:layout_column="1"
                    android:layout_gravity="end" />

                <TextView
                    android:layout_height="50dp"
                    android:layout_row="3"
                    android:layout_column="0"
                    android:gravity="center|start"
                    android:text="@string/phone"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/phoneInput"
                    android:layout_width="130dp"
                    android:layout_height="50dp"
                    android:layout_row="3"
                    android:layout_column="1"
                    android:layout_gravity="end"
                    android:inputType="phone" />

                <TextView
                    android:layout_height="50dp"
                    android:layout_row="4"
                    android:layout_column="0"
                    android:gravity="center|start"
                    android:text="@string/wantsTo"
                    android:textSize="15sp" />

                <Spinner
                    android:id="@+id/wantsToInput"
                    android:layout_width="130dp"
                    android:layout_height="50dp"
                    android:layout_row="4"
                    android:layout_column="1"
                    android:layout_gravity="end" />

                <TextView
                    android:layout_height="50dp"
                    android:layout_row="5"
                    android:layout_column="0"
                    android:gravity="center|start"
                    android:text="@string/city"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/cityInput"
                    android:layout_width="130dp"
                    android:layout_height="50dp"
                    android:layout_row="5"
                    android:layout_column="1"
                    android:layout_gravity="end"
                    android:inputType="text" />


            </GridLayout>

            <LinearLayout
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_width="275dp"
                android:layout_height="21dp"
                android:gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:text="@string/saveInput" />

                <CheckBox
                    android:checked="true"
                    android:id="@+id/saveInputCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="50dp"
                android:gravity="center">

                <Button
                    android:id="@+id/cancelBtn"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="7dp"
                    android:layout_marginRight="7dp"
                    android:layout_marginBottom="20dp"
                    android:background="@color/lightBlue"
                    android:gravity="center"
                    android:onClick="cancel"
                    android:text="@string/cancel" />

                <Button
                    android:id="@+id/okBtn"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="7dp"
                    android:layout_marginBottom="20dp"
                    android:background="@color/lightBlue"
                    android:gravity="center"
                    android:onClick="login"
                    android:text="@string/ok" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/loadingSection"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:text="@string/loading"
                android:textAlignment="center"
                android:textSize="30sp" />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:indeterminate="true" />
        </LinearLayout>
    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>