<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:fillViewport="true"
        android:layout_marginBottom="20dp"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:gravity="center|top"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/quoteArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/quoteForInspiration"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/quote"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/authorInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="textEnd"
                    android:textSize="15sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="200dp"
                android:layout_marginBottom="20dp"
                android:background="@color/lightBlue"
                android:gravity="center"
                android:onClick="startRun"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/run" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/run"
                    android:textColor="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="200dp"
                android:layout_marginBottom="20dp"
                android:background="@color/lightBlue"
                android:gravity="center"
                android:onClick="startBike"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/bike" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/bike"
                    android:textColor="@color/black" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="200dp"
                android:layout_marginBottom="20dp"
                android:background="@color/lightBlue"
                android:gravity="center"
                android:onClick="startWalk"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/walk" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/walk"
                    android:textColor="@color/black" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>